bug: 🐛 Fixing issue with H1 on mobile

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -31,7 +31,7 @@ h3 {
 }
 
 h1 {
-  font-size: var(--step-6);
+  font-size: var(--step-5);
 }
 
 h2 {
